# nanuqfi

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  typedoc.json
.github/workflows/: ci.yml
docs/: DEVNET-TEST-PLAN.md  production-readiness-report.md
docs/hackathon/: strategy-documentation.md
docs/superpowers/plans/: 2026-03-15-nanuqfi-implementation.md  2026-03-15-nanuqfi-integration.md  2026-03-30-hackathon-submission.md  2026-04-03-marketing-site.md  2026-04-04-ai-transparency-ui.md  2026-04-05-kamino-backend.md  2026-04-05-marginfi-backend-real.md  2026-04-06-backtest-engine.md  2026-04-06-production-hardening.md  2026-04-07-test-coverage.md  2026-04-10-critical-keeper-bugs.md  2026-04-10-p0-critical-fixes.md  2026-04-11-ranger-adaptor.md
docs/superpowers/specs/: 2026-03-15-nanuqfi-integration-design.md  2026-03-15-nanuqfi-vault-strategy-design.md  2026-03-30-hackathon-submission-design.md  2026-04-01-pitch-tab-revamp-design.md  2026-04-03-marketing-site-design.md  2026-04-04-ai-transparency-ui-design.md  2026-04-05-kamino-backend-design.md  2026-04-05-marginfi-backend-real-design.md  2026-04-06-backtest-engine-design.md  2026-04-06-production-hardening-design.md  2026-04-07-test-coverage-design.md  2026-04-10-p0-critical-fixes-design.md  2026-04-11-ranger-adaptor-design.md
programs/allocator/: Cargo.toml
programs/allocator/src/: errors.rs  events.rs  lib.rs  state.rs  validation.rs
programs/allocator/src/tests/: arithmetic_test.rs  instruction_test.rs  mod.rs  state_test.rs  validation_test.rs
programs/mock-ranger-vault/: Cargo.toml
programs/mock-ranger-vault/src/: lib.rs
programs/nanuqfi-adaptor/: Cargo.toml
programs/nanuqfi-adaptor/src/: lib.rs
scripts/: check-deposit.ts  e2e-gate.ts  fix-treasury-usdc.ts  migrate-positions.ts  migrate-v1.ts  migrate-vaults.ts  seed-aggressive.ts  seed-and-test.ts  setup-devnet.ts  setup-drift-user.ts  setup-ranger-devnet.ts  test-halt-resume.ts  test-phase-b.ts  test-phase-c.ts
scripts/legacy/: e2e-gate.ts  test-halt-resume.ts  test-phase-b.ts  test-phase-c.ts
tests/: ranger-adaptor.test.ts
