[package]
name = "nanuqfi-allocator"
version = "0.1.0"
description = "NanuqFi on-chain allocator program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nanuqfi_allocator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["devnet"]
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

# blake3 >=1.6 pulls constant_time_eq 0.4.2 which requires edition2024
# (Rust 1.85+), incompatible with platform-tools v1.51 (rustc 1.84.1).
blake3 = ">=1.5.5, <1.6"
