[package]
name = "nanuqfi-adaptor"
version = "0.1.0"
description = "NanuqFi adaptor for Ranger Earn vault integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nanuqfi_adaptor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
nanuqfi-allocator = { path = "../allocator", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
  'cfg(target_os, values("solana"))',
] }
